; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/core/extr_pins_teensy.c_pulseIn_high.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/core/extr_pins_teensy.c_pulseIn_high.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PULSEIN_LOOPS_PER_USEC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pulseIn_high(i64* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @PULSEIN_LOOPS_PER_USEC, align 8
  %11 = mul nsw i64 %9, %10
  store i64 %11, i64* %6, align 8
  br label %12

12:                                               ; preds = %21, %2
  %13 = load i64*, i64** %4, align 8
  %14 = load volatile i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %12
  %17 = load i64, i64* %6, align 8
  %18 = add nsw i64 %17, -1
  store i64 %18, i64* %6, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i64 0, i64* %3, align 8
  br label %51

21:                                               ; preds = %16
  br label %12

22:                                               ; preds = %12
  br label %23

23:                                               ; preds = %33, %22
  %24 = load i64*, i64** %4, align 8
  %25 = load volatile i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  %27 = xor i1 %26, true
  br i1 %27, label %28, label %34

28:                                               ; preds = %23
  %29 = load i64, i64* %6, align 8
  %30 = add nsw i64 %29, -1
  store i64 %30, i64* %6, align 8
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  store i64 0, i64* %3, align 8
  br label %51

33:                                               ; preds = %28
  br label %23

34:                                               ; preds = %23
  %35 = call i64 (...) @micros()
  store i64 %35, i64* %7, align 8
  br label %36

36:                                               ; preds = %45, %34
  %37 = load i64*, i64** %4, align 8
  %38 = load volatile i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %46

40:                                               ; preds = %36
  %41 = load i64, i64* %6, align 8
  %42 = add nsw i64 %41, -1
  store i64 %42, i64* %6, align 8
  %43 = icmp eq i64 %42, 0
  br i1 %43, label %44, label %45

44:                                               ; preds = %40
  store i64 0, i64* %3, align 8
  br label %51

45:                                               ; preds = %40
  br label %36

46:                                               ; preds = %36
  %47 = call i64 (...) @micros()
  store i64 %47, i64* %8, align 8
  %48 = load i64, i64* %8, align 8
  %49 = load i64, i64* %7, align 8
  %50 = sub nsw i64 %48, %49
  store i64 %50, i64* %3, align 8
  br label %51

51:                                               ; preds = %46, %44, %32, %20
  %52 = load i64, i64* %3, align 8
  ret i64 %52
}

declare dso_local i64 @micros(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
